[package]
name                    = "pagerank"
version                 = "0.1.0"
edition                 = "2021"

[dependencies]
anyhow                  = { version = "1.0" }
serde                   = { version = "1", features = ["derive"] }
reqwest                 = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test              = "*"
url                     = { version = "2.2",  features = ["serde"] }